# ERA-Efficient-Resource-allocation

./: CMakeLists.txt  README.md  README_DASHBOARD.md  README_PRESENTATION.md  README_STANDALONE.md  build_qt_dashboard.sh  build_standalone_dashboard.sh  make_executable.sh  make_rebuild_executable.sh  make_run_executable.sh  make_standalone_executable.sh  rebuild.sh  run_dashboard.sh
include/genetic/: chromosome.hpp  crossover.hpp  fitness.hpp  mutation.hpp  population.hpp
include/resource/cpu/: cpu_monitor.hpp  cpu_optimizer.hpp
include/resource/memory/: memory_monitor.hpp  memory_optimizer.hpp
include/resource/power/: power_monitor.hpp  power_optimizer.hpp
include/sensors/camera/: camera_capture.hpp
include/sensors/mpu6050/: motion_processor.hpp
include/sensors/temperature/: temp_reader.hpp
include/utils/: data_types.hpp  logger.hpp
src/: main.cpp
src/api/: api_server.cpp
src/genetic/: chromosome.cpp  crossover.cpp  mutation.cpp  population.cpp
src/load_tests/: load_generator.cpp
src/qt_dashboard/: main.cpp  main_standalone.cpp  mainwindow.cpp  mainwindow.h  qt_dashboard.pro  standalone_dashboard.cpp  standalone_dashboard.h  standalone_dashboard.pro
src/resource/cpu/: cpu_monitor.cpp  cpu_optimizer.cpp
src/resource/memory/: memory_monitor.cpp  memory_optimizer.cpp
src/resource/power/: power_monitor.cpp  power_optimizer.cpp
src/scripts/: build.sh  run_tests.sh  setup_sensors.sh
src/sensors/camera/: camera_capture.cpp
src/sensors/mpu6050/: motion_processor.cpp
src/sensors/temperature/: temp_reader.cpp
src/tests/: CMakeLists.txt
src/tests/integration/: CMakeLists.txt  system_test.cpp
src/tests/unit/: CMakeLists.txt  senors_test.cpp
standalone_build/: Makefile  era_standalone_dashboard  moc_standalone_dashboard.cpp
